# csharp-parser

./: .dir-locals.el  README.md  csharp-parse.cabal  test-data.txt
src/: CSharpParser.hs  CsharpParser.hs  Main.hs
tests/: Test.hs
